# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/libs/include/libyuv/: convert_argb.h  libyuv.h
app/src/androidTest/java/com/zhangteng/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dn_player.cpp  ttt.cpp
app/src/main/java/com/zhangteng/ffmpegdemo/: MainActivity.java  VideoPlayer.java
app/src/main/java/com/zhangteng/ffmpegdemo/widget/: VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: filepaths.xml
app/src/test/java/com/zhangteng/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
